# airfoildb

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
airfoildb/: bspline.py  cli.py  io.py  webscrap.py
src/airfoildb/: webscrap.py
