[tool.poetry]
name = "airfoildb"
version = "0.1.0"
description = "Consistent B-spline representation for the UIUC airfoil database."
authors = ["Gabriel B. Santos <gabriel.bertacco@unesp.br>"]
license = "MIT"
packages = [
  { include = "airfoildb" },
]

[tool.poetry.scripts]
airfoildb = 'airfoildb.cli:app'

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
beautifulsoup4 = "^4.11"
requests = "^2.26"
scipy = "^1.7"
numpy = "^1.21"
typer = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
