[project]
name = "airfoildb"
version = "0.1.0"
description = "Consistent B-spline representation for the UIUC airfoil database."
authors = [
    { name = "Gabriel B. Santos", email = "gabriel.bertacco@unesp.br" }
]
dependencies = [
    "typer>=0.7",
    "numpy>=1.24.0",
    "scipy>=1.9.3",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.8"
packages = [
  {include = "airfoildb"}
]

[project.scripts]
airfoildb = 'airfoildb.cli:app'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = false
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["airfoildb"]

[tool.black]
line-length = 79
