[project]
name = "airfoildb"
version = "0.1.0"
description = "Consistent B-spline representation for the UIUC airfoil database."
authors = [
    { name = "Gabriel B. Santos", email = "gabriel.bertacco@unesp.br" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "numpy>2",
    "requests>=2.31.0",
    "scipy>=1.14",
    "typer>=0.7",
]
packages = [
  { include = "airfoildb" }
]

[project.scripts]
airfoildb = 'airfoildb.cli:app'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["airfoildb"]

[tool.ruff]
line-length = 79
